--- a/angular.json
+++ b/angular.json
@@ -30,10 +30,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "src/scss/styles.scss",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
-            ],
+            "styles": ["src/scss/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -96,10 +93,7 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.scss"
-            ],
+            "styles": ["src/styles.scss"],
             "scripts": []
           }
         }
