--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
+    "keego-ds": "^1.0.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.4.0",
     "zone.js": "~0.13.1"
