--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.2",
+    "@angular/cdk": "^16.1.2",
     "@angular/common": "^16.1.2",
     "@angular/compiler": "^16.1.2",
     "@angular/core": "^16.1.2",
+    "@angular/forms": "^16.1.2",
     "@angular/platform-browser": "^16.1.2",
     "@angular/platform-browser-dynamic": "^16.1.2",
     "@angular/router": "^16.1.2",
@@ -22,7 +24,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.4.0",
     "zone.js": "~0.13.1"
