add app version indicator, update gitignore

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,8 @@
     ],
     "useDefineForClassFields": false,
     "strictPropertyInitialization": false,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
