--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,12 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/scss/styles.scss"],
             "scripts": [],
-            "browser": "src/main.ts"
+            "browser": "src/main.ts",
+            "stylePreprocessorOptions": {
+              "sass": {
+                "silenceDeprecations": ["mixed-decls", "color-functions", "global-builtin", "import"]
+              }
+            }
           },
           "configurations": {
             "production": {
