--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/compiler-cli": "^19.2.3",
     "@types/jasmine": "~4.3.4",
     "@types/node": "^20.3.1",
+    "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~5.0.1",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.2.0",
